<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25">


        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/starsports"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25">

        <LinearLayout
            android:weightSum="100"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="45"
                android:padding="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/roundedgradient"
                android:inputType="text"
                android:id="@+id/user_id"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/roundedgradient"
                android:layout_height="0dp"
                android:layout_weight="45"
                android:padding="15dp"
                android:inputType="textPassword"
                android:id="@+id/password"/>


        </LinearLayout>





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25">

        <LinearLayout
            android:weightSum="100"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="45"
                android:textAllCaps="false"
                android:text="@string/login_btn"
                android:id="@+id/btn_login"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:layout_gravity="center"
                android:text="@string/forgot_password"
                android:id="@+id/forgotpassword"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="45"
                android:weightSum="100">


                <Button
                    android:layout_width="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="40"
                    android:textAllCaps="false"
                    android:text="@string/change_username"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="match_parent" />

                <View
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="20"
                    android:layout_height="match_parent"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="40"
                    android:textAllCaps="false"
                    android:text="@string/help"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25">


        <LinearLayout
            android:weightSum="100"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:background="@drawable/fingerprintimg"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:text="@string/press_for_touchid"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/for_support_help_contact"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/for_copyright"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>